--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-  "name": "mooBudgetTool",
-  "short_name": "mooBudget",
-  "start_url": "./mooBudgetTool.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2563eb",
-  "icons": [
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/2933/2933116.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/2933/2933116.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "Moo Budget Tool",
+    "short_name": "MooBudget",
+    "start_url": "./mooBudgetTool.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#4f46e5",
+    "icons": [
+        {
+            "src": "https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263/cow.svg", 
+            "sizes": "192x192",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263/cow.svg",
+            "sizes": "512x512",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
+        }
+    ]
 }
